# pkg/api/v1alpha1/docs/v1alpha1_swagger.yaml
@@ -20,6 +20,16 @@ definitions:
     x-enum-varnames:
     - Int
     - String
+  k8s_io_apimachinery_pkg_apis_meta_v1.ConditionStatus:
+    enum:
+    - "True"
+    - "False"
+    - Unknown
+    type: string
+    x-enum-varnames:
+    - ConditionTrue
+    - ConditionFalse
+    - ConditionUnknown
   resource.Quantity:
     properties:
       Format:
@@ -358,6 +368,67 @@ definitions:
           Mutually-exclusive with name.  The contents of all selected
           ClusterTrustBundles will be unified and deduplicated.
           +optional
+        type: string
+    type: object
+  v1.Condition:
+    properties:
+      lastTransitionTime:
+        description: |-
+          lastTransitionTime is the last time the condition transitioned from one status to another.
+          This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+          +required
+          +kubebuilder:validation:Required
+          +kubebuilder:validation:Type=string
+          +kubebuilder:validation:Format=date-time
+        type: string
+      message:
+        description: |-
+          message is a human readable message indicating details about the transition.
+          This may be an empty string.
+          +required
+          +kubebuilder:validation:Required
+          +kubebuilder:validation:MaxLength=32768
+        type: string
+      observedGeneration:
+        description: |-
+          observedGeneration represents the .metadata.generation that the condition was set based upon.
+          For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+          with respect to the current state of the instance.
+          +optional
+          +kubebuilder:validation:Minimum=0
+        type: integer
+      reason:
+        description: |-
+          reason contains a programmatic identifier indicating the reason for the condition's last transition.
+          Producers of specific condition types may define expected values and meanings for this field,
+          and whether the values are considered a guaranteed API.
+          The value should be a CamelCase string.
+          This field may not be empty.
+          +required
+          +kubebuilder:validation:Required
+          +kubebuilder:validation:MaxLength=1024
+          +kubebuilder:validation:MinLength=1
+          +kubebuilder:validation:Pattern=`^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$`
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/k8s_io_apimachinery_pkg_apis_meta_v1.ConditionStatus'
+        description: |-
+          status of the condition, one of True, False, Unknown.
+          +required
+          +kubebuilder:validation:Required
+          +kubebuilder:validation:Enum=True;False;Unknown
+      type:
+        description: |-
+          type of condition in CamelCase or in foo.example.com/CamelCase.
+          ---
+          Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be
+          useful (see .node.status.conditions), the ability to deconflict is important.
+          The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
+          +required
+          +kubebuilder:validation:Required
+          +kubebuilder:validation:Pattern=`^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$`
+          +kubebuilder:validation:MaxLength=316
         type: string
     type: object
   v1.ConfigMapEnvSource:
@@ -2173,6 +2244,56 @@ definitions:
           Populated by the system.
           Read-only.
           More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names#uids
+          +optional
+        type: string
+    type: object
+  v1.ObjectReference:
+    properties:
+      apiVersion:
+        description: |-
+          API version of the referent.
+          +optional
+        type: string
+      fieldPath:
+        description: |-
+          If referring to a piece of an object instead of an entire object, this string
+          should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+          For example, if the object reference is to a container within a pod, this would take on a value like:
+          "spec.containers{name}" (where "name" refers to the name of the container that triggered
+          the event) or if no container name is specified "spec.containers[2]" (container with
+          index 2 in this pod). This syntax is chosen only to have some well-defined way of
+          referencing a part of an object.
+          TODO: this design is not final and this field is subject to change in the future.
+          +optional
+        type: string
+      kind:
+        description: |-
+          Kind of the referent.
+          More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+          +optional
+        type: string
+      name:
+        description: |-
+          Name of the referent.
+          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+          +optional
+        type: string
+      namespace:
+        description: |-
+          Namespace of the referent.
+          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+          +optional
+        type: string
+      resourceVersion:
+        description: |-
+          Specific resourceVersion to which this reference is made, if any.
+          More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+          +optional
+        type: string
+      uid:
+        description: |-
+          UID of the referent.
+          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
           +optional
         type: string
     type: object
@@ -4852,6 +4973,97 @@ definitions:
         description: Number of threads uses this environmentBuild
         type: integer
     type: object
+  v1alpha1.Task:
+    properties:
+      apiVersion:
+        description: |-
+          APIVersion defines the versioned schema of this representation of an object.
+          Servers should convert recognized schemas to the latest internal value, and
+          may reject unrecognized values.
+          More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
+          +optional
+        type: string
+      kind:
+        description: |-
+          Kind is a string value representing the REST resource this object represents.
+          Servers may infer this from the endpoint the client submits requests to.
+          Cannot be updated.
+          In CamelCase.
+          More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+          +optional
+        type: string
+      metadata:
+        $ref: '#/definitions/v1.ObjectMeta'
+      spec:
+        $ref: '#/definitions/v1alpha1.TaskSpec'
+      status:
+        $ref: '#/definitions/v1alpha1.TaskStatus'
+    type: object
+  v1alpha1.TaskSpec:
+    properties:
+      context:
+        description: |-
+          Context is the execution context for the task
+          +kubebuilder:validation:Required
+        type: string
+      environmentBuildName:
+        description: |-
+          The environmentBuild that the task will use, must be in the same namespace as the task
+          +kubebuilder:validation:Required
+        type: string
+      instruction:
+        description: |-
+          Instruction is the instruction for the task
+          +kubebuilder:validation:Required
+        type: string
+      userID:
+        description: |-
+          The user ID that initiated the Task
+          +kubebuilder:validation:Required
+          +kubebuilder:default:="anonymous"
+        type: string
+    type: object
+  v1alpha1.TaskStatus:
+    properties:
+      allocatedAt:
+        description: |-
+          The time when the task pod is up and running
+          +optional
+        type: string
+      conditions:
+        description: |-
+          The conditions of the task
+          +optional
+        items:
+          $ref: '#/definitions/v1.Condition'
+        type: array
+      internalIP:
+        description: |-
+          Internal IP of the Task Pod
+          +optional
+        type: string
+      output:
+        description: |-
+          Output of the task
+          +optional
+        type: string
+      pod:
+        allOf:
+        - $ref: '#/definitions/v1.ObjectReference'
+        description: |-
+          Pod is the reference to the pod that is running the task
+          +optional
+      reason:
+        description: |-
+          Reason for the error
+          +optional
+        type: string
+      state:
+        description: |-
+          +kubebuilder:validation:Enum=PENDING;SCHEDULED;RUNNING;TERMINATING;ERROR;NOT_FOUND
+          +kubebuilder:default:=PENDING
+        type: string
+    type: object
 info:
   contact:
     email: jingkai@hey.com
@@ -4954,6 +5166,55 @@ paths:
           description: Not Found
           schema: {}
       summary: Update EnvironmentBuild
+  /:namespace/tasks:
+    post:
+      consumes:
+      - application/json
+      description: create task
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/v1alpha1.Task'
+        "400":
+          description: Bad Request
+          schema: {}
+      summary: Create Task
+  /:namespace/tasks/:name:
+    delete:
+      description: delete task
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+      summary: Delete Task
+    get:
+      description: get task
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1alpha1.Task'
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Get Task
   /healthz:
     get:
       consumes:
